--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -24,7 +25,12 @@
    
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>CSS(Cascading style sheets) is a programming language used by developers to define how web page content is presented to users</li>
+          <li>CSS defines the colors, aesthetics, visual layout, and organization</li>
+          <li>There are three ways to style a webpage using CSS: inline CSS, internal CSS style sheet, and external CSS style sheet. </li>
+          <li>When a developer wants to style an element directly in the HTML file, then inline CSS is used</li>
+          <li>The internal style sheet contains CSS rules for the webpage in the head section of the HTML file using style element</li>
+          <li>In external CSS the CSS rules are written in an external file and it is linked using a link  element in head</li>
         </ul>
         
       </section>
