updated index file

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <li>In CSS rule a selector is followed by  a declaration block inside curly braces. selector{declaration ;declaration ;}</li>
           <ul>
             <li> Selector defines the element or attributes to which the rules, or declarations, will apply.</li>
-            <li>Declarations contain two important components: the CSS property we want to apply and the value of the property.</li>
+            <li>Declarations contain two important components: the CSS property we want to apply and the value of the property.  selector{property :value ;}</li>
           </ul>
         <li>A margin property indicates how much space we want around the outside of an element</li>
         <li>The padding property adds space around the content inside an element.</li>
@@ -169,7 +169,7 @@
     <footer>
       <p>I can code!</p>
     </footer>
-    <script src="./assets/script.js"></script>End of code snippet
+    <script src="./assets/script.js"></script>
 
   </body>
 </html>
